# flint

./: .gitignore  AUDIT_REPORT.md  AUDIT_V2.md  AUDIT_V3_RUNTIME.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: social-preview.md
scripts/: fetch-fonts.sh  rasterize-icon.mjs
src/: App.tsx  index.css  main.tsx  overlay-app.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/countdown/: index.js  manifest.json
src-tauri/plugins/pomodoro/: index.js  manifest.json
src-tauri/plugins/session-log/: index.js  manifest.json
src-tauri/plugins/stats/: index.js  manifest.json
src-tauri/plugins/stopwatch/: index.js  manifest.json
src-tauri/src/: cache.rs  commands.rs  config.rs  lib.rs  main.rs  overlay.rs  plugins.rs  presets.rs  storage.rs  tags.rs  timer.rs  tray.rs
src/components/: command-palette.tsx  error-boundary.tsx  notifications.tsx  plugin-host.tsx  plugin-prompt.tsx  plugin-settings.tsx  plugin-view-renderer.tsx  preset-form.tsx  quick-start-bar.tsx  select.tsx  session-detail.tsx  session-log.tsx  settings-panel.tsx  sidebar.tsx  stats-dashboard.tsx  stats-heatmap.tsx  status-bar.tsx  tag-autocomplete.tsx  tag-input.tsx  timer-display.tsx  tray-toast.tsx
src/hooks/: use-timer.ts
src/lib/: chart-colors.ts  (+10 more)
