[package]
name = "flint"
version = "0.1.1"
description = "Strike focus. An open-source timer for focused work."
authors = ["Lokavya Singh"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "flint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
indexmap = { version = "2", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
